--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.19",
+    "apollo-server": "^2.1.0",
+    "graphql": "^14.0.2",
+    "http-proxy-middleware": "^0.19.0",
     "react": "^16.6.0",
+    "react-apollo": "^2.2.4",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.0"
   },
